# telemetria-sender

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Lua.cmake  README.md  READMETEST.md  architecture.txt  cfg.lua  compile.sh  config.json  einsteinify.py  enable_signal.sh  genindex.html  idle_signal.sh  index.html  main.c  objects.inv  package-lock.json  package.json  search.html  searchindex.js  sender.out
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: class_view_hierarchy.doctree  define_jsmn__test_8c_1a0273e29042742f4e599e1fc49be19c6c.doctree  define_jsmn__test_8c_1a1b4d51e7cd70fba297dd1676ed2dc37b.doctree  define_jsmn__test_8c_1a1fb5855a9ef4d9723cc90698c2946ce3.doctree  define_jsmn__test_8c_1a410cd4f831fbbb674557b2aa6284484d.doctree  define_jsmn__test_8c_1a4c29258cb6b467ba162cfe09d50a6ad7.doctree  define_jsmn__test_8c_1a5880db10b08557ba157306931beac19b.doctree  define_jsmn__test_8c_1a5c48c6301374df1920d7645837018f96.doctree  define_jsmn__test_8c_1a6c62686f717602088bfced2b1456cba8.doctree  define_jsmn__test_8c_1a6e0d3e5a3c9a8cec2f7734e149fb7ea7.doctree  define_jsmn__test_8c_1a73a3b169ac8c3419cbe15327e75ffcfd.doctree  define_jsmn__test_8c_1a9b7ee5bbb263671ca310a70e0d1526e9.doctree  define_jsmn__test_8c_1aa730aa6e498c379420e253d3e9f48e1c.doctree  define_jsmn__test_8c_1aa987bb9bdabfd416763ca9ebc235cf25.doctree  define_jsmn__test_8c_1aa99dd26a01ca1740a689bff6009be93f.doctree  define_jsmn__test_8c_1ab5a2bfae4f669203b1b433e93d3d3d0f.doctree  define_jsmn__test_8c_1ab901dc08c3d247fdcc588b7c0e6cc455.doctree  define_jsmn__test_8c_1ad48a257b2f2782c3f0153beafe125784.doctree  define_jsmn__test_8c_1ae8cf2a3f50ee5a8502517bd478215fea.doctree  define_jsmn__test_8c_1ae9493ed0020a5a9595eb8d0b6870f947.doctree  define_jsmn__test_8c_1af2062938627e941f0ab2b92162edcaae.doctree  define_jsmn__test_8c_1af6afc7d17e8f9d1af9728ac7f19f86f4.doctree  define_jsmn__test_8c_1af866da305aac2ecaf71a0c6c773ee1c1.doctree  define_jsmn__test_8c_1af8bcfd10e6aef6f72173bfe7137e28e4.doctree  define_jsmn__test_8c_1afac59fb4c00d048a1e8404fa9348eef0.doctree  define_log__utils__colors_8h_1a34995b955465f6bbb37c359173d50477.doctree  define_log__utils__colors_8h_1a5a123b382640b3aa65dd5db386002fbc.doctree  define_log__utils__colors_8h_1a8d0b0043e152438bb39b918a1f98c65f.doctree  define_log__utils__colors_8h_1a966c72d8d733c7734c6c784753d894c7.doctree  define_log__utils__colors_8h_1ab9cba69b94a63d50492a1fd6deb81ca6.doctree  define_log__utils__colors_8h_1aca16e6a49eb51333c5fd3eee19487315.doctree  define_log__utils__colors_8h_1acb30614ba1535da5b9d0c490b3c10515.doctree  define_vector__utils_8h_1a83aff59c521b0f1ed126d1a9cb4b837c.doctree  define_vector__utils_8h_1ab3ef807708f426a61642d2de6886b346.doctree  dir_utils.doctree  dir_utils_can_utils.doctree  dir_utils_config_utils.doctree  dir_utils_config_utils_jsmn.doctree  dir_utils_config_utils_jsmn_example.doctree  dir_utils_gather_utils.doctree  (+353 more)
.github/workflows/: DocYourCode.yml  build.yml  tests-general.yml  tests-moduled.yml  tests-partial.yml  tests.yml
api/: class_view_hierarchy.html  define_jsmn__test_8c_1a0273e29042742f4e599e1fc49be19c6c.html  define_jsmn__test_8c_1a1b4d51e7cd70fba297dd1676ed2dc37b.html  define_jsmn__test_8c_1a1fb5855a9ef4d9723cc90698c2946ce3.html  define_jsmn__test_8c_1a410cd4f831fbbb674557b2aa6284484d.html  define_jsmn__test_8c_1a4c29258cb6b467ba162cfe09d50a6ad7.html  define_jsmn__test_8c_1a5880db10b08557ba157306931beac19b.html  define_jsmn__test_8c_1a5c48c6301374df1920d7645837018f96.html  define_jsmn__test_8c_1a6c62686f717602088bfced2b1456cba8.html  define_jsmn__test_8c_1a6e0d3e5a3c9a8cec2f7734e149fb7ea7.html  define_jsmn__test_8c_1a73a3b169ac8c3419cbe15327e75ffcfd.html  define_jsmn__test_8c_1a9b7ee5bbb263671ca310a70e0d1526e9.html  define_jsmn__test_8c_1aa730aa6e498c379420e253d3e9f48e1c.html  define_jsmn__test_8c_1aa987bb9bdabfd416763ca9ebc235cf25.html  define_jsmn__test_8c_1aa99dd26a01ca1740a689bff6009be93f.html  define_jsmn__test_8c_1ab5a2bfae4f669203b1b433e93d3d3d0f.html  define_jsmn__test_8c_1ab901dc08c3d247fdcc588b7c0e6cc455.html  define_jsmn__test_8c_1ad48a257b2f2782c3f0153beafe125784.html  define_jsmn__test_8c_1ae8cf2a3f50ee5a8502517bd478215fea.html  define_jsmn__test_8c_1ae9493ed0020a5a9595eb8d0b6870f947.html  define_jsmn__test_8c_1af2062938627e941f0ab2b92162edcaae.html  define_jsmn__test_8c_1af6afc7d17e8f9d1af9728ac7f19f86f4.html  define_jsmn__test_8c_1af866da305aac2ecaf71a0c6c773ee1c1.html  define_jsmn__test_8c_1af8bcfd10e6aef6f72173bfe7137e28e4.html  define_jsmn__test_8c_1afac59fb4c00d048a1e8404fa9348eef0.html  define_log__utils__colors_8h_1a34995b955465f6bbb37c359173d50477.html  define_log__utils__colors_8h_1a5a123b382640b3aa65dd5db386002fbc.html  define_log__utils__colors_8h_1a8d0b0043e152438bb39b918a1f98c65f.html  define_log__utils__colors_8h_1a966c72d8d733c7734c6c784753d894c7.html  define_log__utils__colors_8h_1ab9cba69b94a63d50492a1fd6deb81ca6.html  define_log__utils__colors_8h_1aca16e6a49eb51333c5fd3eee19487315.html  define_log__utils__colors_8h_1acb30614ba1535da5b9d0c490b3c10515.html  define_vector__utils_8h_1a83aff59c521b0f1ed126d1a9cb4b837c.html  define_vector__utils_8h_1ab3ef807708f426a61642d2de6886b346.html  dir_utils.html  dir_utils_can_utils.html  dir_utils_config_utils.html  dir_utils_config_utils_jsmn.html  dir_utils_config_utils_jsmn_example.html  dir_utils_gather_utils.html  (+353 more)
examples/: receiver  receiver.c  sender  sender.c
include/: libsocketcan.h  plugin.h  utils.h
models/: config.model.json  config.schema.json  structure.model.json
prova/: compile.sh  main.c  send.out
rpi-telemetry/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  Lua.cmake  Toolchain-rpi.cmake  cansenderBrake.sh  cansenderThrottle.sh  cfg.lua  cross  fsm.dot
src/: .gitignore  cfg.json  compile.sh  config.json  enable_signal.sh  main.c  package-lock.json  package.json  plugin.h  sender.out  structure.json  ultils.c
state_machine/: state_machine.c  state_machine.h  state_machine_condition.h
test/: package-lock.json  package.json
tests/: a.out
utils/: .gitignore
(+2836 files in other folders)
